# http_vs_grpc_part2

./: README.md
backend/: Cargo.toml  build.rs  readme.md
backend/proto/: book.proto
backend/src/: grpc-client.rs  grpc-server.rs  http.rs
frontend/: pubspec.yaml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: app.dart  main.dart
frontend/lib/grpc/: book.pb.dart  book.pbenum.dart  book.pbgrpc.dart  book.pbjson.dart
frontend/lib/model/: result.dart
frontend/lib/sql/: base.dart  create.dart  insert.dart  reset.dart  stat.dart
frontend/lib/utils/: logDebug.dart  utils.dart
frontend/lib/widgets/: button.dart  result_card.dart  widgets.dart
